--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+th {
+  font-weight: bold;
+  text-align: left;
+}
+
+td, th {
+  padding: 0.8em;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+tr {
+  border:1px solid #000;
+}
