Changed description field to notes

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -16,7 +16,7 @@
     <td><%= event.title %></td>
     <td><%= event.friendly_start_date %></td>
     <td><%= event.friendly_end_date %></td>
-    <td><%= truncate event.description, :length => 20 %></td>
+    <td><%= truncate event.notes, :length => 20 %></td>
     <td><%= link_to 'Show', event %></td>
     <td><%= link_to 'Edit', edit_event_path(event) %></td>
     <td><%= link_to 'Destroy', event, :confirm => 'Are you sure?', :method => :delete %></td>
