--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,23 +1,23 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Title:</b>
+  <strong>Title:</strong>
   <%= @event.title %>
 </p>
 
 <p>
-  <b>Start date:</b>
+  <strong>Start date:</strong>
   <%= @event.start_date %>
 </p>
 
 <p>
-  <b>End date:</b>
+  <strong>End date:</strong>
   <%= @event.end_date %>
 </p>
 
 <p>
-  <b>Description:</b>
-  <%= @event.description %>
+  <strong>Description:</strong>
+  <%= @event.notes %>
 </p>
 
 
