--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.datetime_select :end_date %>
   </div>
   <div class="field">
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.label :notes %><br />
+    <%= f.text_area :notes %>
   </div>
   <div class="actions">
     <%= f.submit %>
