--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,12 +7,17 @@
 
 <p>
   <strong>Start date:</strong>
-  <%= @event.start_date %>
+  <%= @event.friendly_start_date %>
 </p>
 
 <p>
   <strong>End date:</strong>
-  <%= @event.end_date %>
+  <%= @event.friendly_end_date %>
+</p>
+
+<p>
+  <strong>End date:</strong>
+  <%= @event.location %>
 </p>
 
 <p>
