--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -24,6 +24,11 @@
     <%= f.datetime_select :end_date %>
   </div>
   <div class="field">
+    <%= f.label :location %><br />
+    <%= f.text_field :location %>
+  </div>
+  
+  <div class="field">
     <%= f.label :notes %><br />
     <%= f.text_area :notes %>
   </div>
