--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,7 +6,7 @@
     <th>Start date</th>
     <th>End date</th>
     <th>Location</th>
-    <th>Description</th>
+    <th>Notes</th>
     <th></th>
     <th></th>
     <th></th>
